# BridgeSpeak

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  bridgespeak_bot.py  env.example  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
frontend/: README.md  components.json  copy-transcripts.js  index.html  jest.config.js  jsconfig.json  package-lock.json  package.json  test-accessibility.js  update_tags.js  vite.config.mjs
frontend/playwright-report/: index.html
frontend/public/: index.html
frontend/src/: App.css  App.js  accessibility-tests.js  index.css  webrtc-client.js
frontend/src/__mocks__/: react-router-dom.js
frontend/src/components/: ErrorBoundary.css  ErrorBoundary.js  ErrorBoundary.test.js  Layout.css  Layout.js  Layout.test.js  Loading.css  ParentDashboard.css  ParentDashboard.js  ResponsiveGrid.jsx  ScenarioTester.js  SeamlessExit.css  SeamlessExit.js  ShadcnDemo.jsx  VideoConversation.css  VideoConversation.js  VideoConversation.test.js
frontend/src/data/: scenarios.js  transcriptLoader.js
frontend/src/design-system/: animations.css  animations.js  index.js  tokens.css
frontend/src/pages/: ConversationPage.js  DashboardPage.js  Home.js  NotFound.js  NotFound.test.js  ResponsiveDemo.jsx  ScenariosPage.css  ScenariosPage.js  ScenariosPage.test.js  SettingsPage.js  ShadcnDemoPage.jsx  StyleGuidePage.css  StyleGuidePage.js  StyleGuidePage.test.js  TestingPage.css  TestingPage.js  TranscriptsPage.css  TranscriptsPage.js  pages.css
frontend/tests/: emoji-icon-sizing.spec.js  responsive-layout.spec.js  user-viewport.spec.js
(+254 files in other folders)
