[project]
name = "tavus-pipecat-quickstart"
version = "0.1.0"
description = "Tavus quickstart for building voice AI bots with Pipecat"
requires-python = ">=3.10"
dependencies = [
    "pipecat-ai[daily,webrtc,silero,deepgram,google,cartesia,runner,local-smart-turn-v3]>=0.0.89",
    "torch>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "google-genai>=0.2.0",
    "python-dotenv>=1.0.1",
    "pillow>=10.0.0",
    "pytest>=8.4.2",
]

[dependency-groups]
dev = [
    "ruff~=0.12.1",
    "anyio>=4.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-tornasync>=0.6.0",
    "pytest-trio>=0.8.0",
    "pytest-twisted<=1.14.3",
    "twisted>=22.10.0",
]

[tool.ruff]
line-length = 100
[tool.ruff.lint]
select = ["I"]

